--- a/app/globals.css
+++ b/app/globals.css
@@ -22,3 +22,44 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Tabs Styling*/
+.tab {
+  position: relative;
+  transition: 0.5s;
+}
+.tab::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 5px;
+  background-color: var(--foreground);
+  bottom: 20%;
+  left: 0;
+  transition: 0.5s;
+}
+.tab:hover {
+  color: var(--foreground);
+}
+.tab:hover::after {
+  width: 100%;
+}
+.tab-active {
+  color: var(--foreground);
+  position: relative;
+  transition: 1s;
+}
+.tab-active::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 5px;
+  background-color: var(--foreground);
+  bottom: 20%;
+  left: 0;
+}
+
+/* Rating Styling */
+/* .react-rater-active {
+  color: var(--foreground) !important;
+} */
